--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,48 @@
+*{
+    text-decoration: none;
+    color: white;
+}
+html, body,
+ul, ol, li,
+h1, h2, h3, h4, h5, h6, p,
+form, input, div {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  float:left;
+  padding:33px 20px;
+}
+
+.header {
+  background-color: #26d0c9;
+  color: white;
+  height: 90px;
+}
+
+.header-logo {
+  float: left;
+  font-size: 36px;
+  padding:20px 40px;
+}
+
+.header-list {
+  float: left;
+}
+
 h1{
     font-size:150px;
     text-align: center;
     font-family: 'Amatic SC', cursive;
+    color: black;
 }
 
 p{
     text-align: center;
+}
+
+body{
+    color: black;
 }
